# ur_simplified

./: .gitignore  README.md
ur10e_simplified_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_simplified_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  ur10e.srdf  ur10e_robot.srdf
ur10e_simplified_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10e_moveit_controller_manager.launch.xml  ur10e_robot_moveit_controller_manager.launch.xml  warehouse.launch
ur_simplified_description/: CMakeLists.txt  package.xml
ur_simplified_description/config/ur10e/: simplified_visual_parameters.yaml
ur_simplified_description/launch/: load_ur10e.launch  view_ur10e.launch
ur_simplified_description/meshes/ur10e/collision/: base.STL  forearm.STL  shoulder.STL  shoulder.stl  upperarm.STL  wrist1.STL  wrist2.STL  wrist3.STL
ur_simplified_description/urdf/: ur10e.urdf.xacro  ur10e_robot.urdf.xacro
ur_simplified_description/urdf/ur10e/: ur10e.xacro  ur10e_macro.xacro  ur10e_robot_cell.urdf.xacro
ur_simplified_description/urdf/ur10e/vecchi/: ur10e.urdf.xacro
