<?xml version="1.0"?>
<package format="2">
  <name>ur_simplified_description</name>
  <version>0.0.0</version>
  <description>The ur_simplified_description package</description>

  <maintainer email="c.tonola001@unibs.it">cesare</maintainer>

  <license>BSD</license>

  <exec_depend>ur_description</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
